--- a/app/src/main/res/layout-land/activity_manage_monitoring.xml
+++ b/app/src/main/res/layout-land/activity_manage_monitoring.xml
@@ -7,12 +7,12 @@
     tools:context=".app.SignUpActivity">
 
     <RelativeLayout
+        android:id="@+id/monitoring_layout"
         android:layout_width="295dp"
         android:layout_height="239dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
-
         android:orientation="vertical">
 
         <Button
@@ -62,6 +62,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
+        android:layout_toRightOf="@+id/monitoring_layout"
         android:orientation="vertical">
 
         <Button
