--- a/app/src/main/res/layout/group_layout.xml
+++ b/app/src/main/res/layout/group_layout.xml
@@ -8,19 +8,20 @@
     <TextView
         android:id="@+id/group_name"
         android:layout_width="match_parent"
-        android:layout_height="314dp"
+        android:layout_height="256dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
         android:text="Name"
-        android:textSize="18sp"
-        tools:layout_editor_absoluteX="111dp"
-        tools:layout_editor_absoluteY="83dp" />
+        android:textSize="18sp" />
 
     <TextView
         android:id="@+id/group_id"
         android:layout_width="match_parent"
-        android:layout_height="323dp"
+        android:layout_height="254dp"
         android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentStart="true"
-        android:text="ID"
-        tools:layout_editor_absoluteX="218dp"
-        tools:layout_editor_absoluteY="343dp" />
+        android:layout_toEndOf="@+id/group_name"
+        android:text="Leader" />
 </RelativeLayout>
