--- a/app/src/main/res/layout/group_layout.xml
+++ b/app/src/main/res/layout/group_layout.xml
@@ -3,25 +3,24 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:padding="5dp">
 
     <TextView
         android:id="@+id/group_name"
         android:layout_width="match_parent"
-        android:layout_height="256dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:text="Name"
-        android:textSize="18sp" />
+        android:layout_height="wrap_content"
+        android:textAppearance="@android:style/TextAppearance.Material.Medium"/>
 
     <TextView
         android:id="@+id/group_id"
         android:layout_width="match_parent"
-        android:layout_height="254dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
+        android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_toEndOf="@+id/group_name"
-        android:text="Leader" />
+        android:layout_below="@+id/group_name"
+        android:text="Leader"
+        android:textAppearance="@android:style/TextAppearance.Material.Medium"
+        android:textSize="14sp"/>
 </RelativeLayout>
