--- a/app/src/main/res/layout-land/activity_manage_monitoring.xml
+++ b/app/src/main/res/layout-land/activity_manage_monitoring.xml
@@ -7,6 +7,7 @@
     tools:context=".app.SignUpActivity">
 
     <RelativeLayout
+        android:id="@+id/monitored_relative_layout"
         android:layout_width="295dp"
         android:layout_height="239dp"
         android:layout_alignParentBottom="true"
@@ -57,6 +58,8 @@
     </RelativeLayout>
 
     <RelativeLayout
+        android:id="@+id/monitoring_relative_layout"
+        android:layout_toLeftOf="@+id/monitored_relative_layout"
         android:layout_width="295dp"
         android:layout_height="239dp"
         android:layout_alignParentBottom="true"
