--- a/app/src/main/res/layout/activity_manage_monitoring.xml
+++ b/app/src/main/res/layout/activity_manage_monitoring.xml
@@ -13,6 +13,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentStart="true"
+
         android:layout_below="@+id/monitored_relative_layout"
         android:orientation="vertical">
 
@@ -30,11 +31,12 @@
         <ListView
             android:id="@+id/monitoring_listview"
             android:layout_width="match_parent"
-            android:layout_height="201dp"
+            android:layout_height="203dp"
             android:layout_alignParentBottom="true"
             android:layout_alignParentEnd="true"
             android:layout_alignParentStart="true"
-            android:layout_marginTop="54dp" />
+            android:layout_below="@+id/monitoring_txtview"
+            android:layout_marginTop="8dp" />
 
         <TextView
             android:id="@+id/monitoring_txtview"
@@ -60,7 +62,6 @@
         android:id="@+id/monitored_relative_layout"
         android:layout_width="match_parent"
         android:layout_height="255dp"
-        android:layout_alignParentEnd="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:orientation="vertical">
@@ -79,11 +80,12 @@
         <ListView
             android:id="@+id/monitored_listview"
             android:layout_width="match_parent"
-            android:layout_height="201dp"
+            android:layout_height="203dp"
+            android:layout_below="@+id/monitored_txtview"
             android:layout_alignParentBottom="true"
             android:layout_alignParentEnd="true"
             android:layout_alignParentStart="true"
-            android:layout_marginTop="54dp" />
+            android:layout_marginTop="8dp" />
 
         <TextView
             android:id="@+id/monitored_txtview"
