--- a/app/src/main/res/layout/activity_manage_monitoring.xml
+++ b/app/src/main/res/layout/activity_manage_monitoring.xml
@@ -1,20 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".app.SignUpActivity">
 
     <RelativeLayout
         android:id="@+id/monitoring_relative_layout"
         android:layout_width="match_parent"
-        android:layout_height="255dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/monitored_relative_layout"
-        android:orientation="vertical">
+        android:layout_height="255dp">
 
         <Button
             android:id="@+id/add_monitoring_btn"
@@ -59,11 +54,7 @@
     <RelativeLayout
         android:id="@+id/monitored_relative_layout"
         android:layout_width="match_parent"
-        android:layout_height="255dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:orientation="vertical">
+        android:layout_height="255dp">
 
         <Button
             android:id="@+id/add_monitored_btn"
@@ -79,11 +70,9 @@
         <ListView
             android:id="@+id/monitored_listview"
             android:layout_width="match_parent"
-            android:layout_height="201dp"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true"
+            android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
-            android:layout_marginTop="54dp" />
+            android:layout_centerVertical="true" />
 
         <TextView
             android:id="@+id/monitored_txtview"
@@ -91,7 +80,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="21dp"
+            android:layout_margin="5dp"
             android:text="@string/monitored"
             android:textSize="18sp" />
 
@@ -106,4 +95,4 @@
 
     </RelativeLayout>
 
-</RelativeLayout>
+</LinearLayout>
