--- a/app/src/main/res/layout/group_layout.xml
+++ b/app/src/main/res/layout/group_layout.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="5dp">
@@ -9,10 +7,9 @@
     <TextView
         android:id="@+id/group_name"
         android:layout_width="match_parent"
-        android:layout_alignParentTop="true"
-        android:text="Name"
         android:layout_height="wrap_content"
-        android:textAppearance="@android:style/TextAppearance.Material.Medium"/>
+        android:layout_alignParentTop="true"
+        android:textAppearance="@android:style/TextAppearance.Material.Medium" />
 
     <TextView
         android:id="@+id/group_id"
@@ -20,7 +17,6 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/group_name"
-        android:text="Leader"
         android:textAppearance="@android:style/TextAppearance.Material.Medium"
-        android:textSize="14sp"/>
+        android:textSize="14sp" />
 </RelativeLayout>
