--- a/app/src/main/res/layout/activity_group_details.xml
+++ b/app/src/main/res/layout/activity_group_details.xml
@@ -19,6 +19,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/groupNameDetail" />
+        android:layout_below="@+id/groupNameDetail"
+        android:padding="5dp" />
 
 </RelativeLayout>
