--- a/app/src/main/res/layout/group_detail_list_view.xml
+++ b/app/src/main/res/layout/group_detail_list_view.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_margin="5dp"
-    android:orientation="vertical">
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:padding="5dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -14,8 +14,7 @@
             android:id="@+id/groupDetailUserName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="5dp"
-            android:text="User Name" />
+            android:layout_marginRight="5dp" />
 
         <TextView
             android:id="@+id/groupLeaderTag"
@@ -29,6 +28,5 @@
         android:id="@+id/groupDetailUserEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="User email"
         android:textSize="12sp" />
 </LinearLayout>
