--- a/app/src/main/res/menu/action_bar_dashboard.xml
+++ b/app/src/main/res/menu/action_bar_dashboard.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/accountInfoButton"
+        android:title="@string/account_info" />
+    <item
         android:id="@+id/logOutButton"
-        android:title="Log Out"
-        app:showAsAction="ifRoom" />
+        android:title="@string/log_out" />
 </menu>
