--- a/app/src/main/res/layout/activity_account_info.xml
+++ b/app/src/main/res/layout/activity_account_info.xml
@@ -3,12 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".app.SignUpActivity">
+    tools:context=".app.AccountInfoActivity">
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/signup_btn"
+        android:layout_above="@+id/update_info_btn"
         android:layout_alignParentStart="false"
         android:layout_below="@+id/account_info_txtview"
         android:layout_centerHorizontal="true"
@@ -24,39 +24,25 @@
             android:paddingRight="20dp">
 
             <EditText
-                android:id="@+id/user_name"
+                android:id="@+id/accountInfoUserName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:editable="false"
                 android:ems="10"
                 android:hint="@string/full_name_sign"
-                android:inputType="textPersonName" />
+                android:inputType="none"
+                android:textStyle="bold" />
 
             <EditText
-                android:id="@+id/email_information"
+                android:id="@+id/accountInfoEmail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
+                android:editable="false"
                 android:ems="10"
                 android:hint="@string/e_mail_hint"
-                android:inputType="textEmailAddress" />
-
-            <EditText
-                android:id="@+id/create_password"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:ems="10"
-                android:hint="@string/password"
-                android:inputType="textPassword" />
-
-            <EditText
-                android:id="@+id/confirm_password"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:ems="10"
-                android:hint="@string/confirm_password_hint"
-                android:inputType="textPassword" />
+                android:inputType="none"
+                android:textStyle="bold" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -64,7 +50,7 @@
                 android:orientation="horizontal">
 
                 <EditText
-                    android:id="@+id/birthday_month_sign_up"
+                    android:id="@+id/accountInfoBirthMonth"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
@@ -74,7 +60,7 @@
                     android:inputType="date" />
 
                 <EditText
-                    android:id="@+id/birthday_year_sign_up"
+                    android:id="@+id/accountInfoBirthYear"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
@@ -85,7 +71,7 @@
             </LinearLayout>
 
             <EditText
-                android:id="@+id/address"
+                android:id="@+id/accountInfoAddress"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
@@ -94,7 +80,7 @@
                 android:inputType="textPersonName" />
 
             <EditText
-                android:id="@+id/homePhone"
+                android:id="@+id/accountInfoHomePhone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
@@ -103,7 +89,7 @@
                 android:inputType="phone" />
 
             <EditText
-                android:id="@+id/cellPhone"
+                android:id="@+id/accountInfoCellPhone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
@@ -112,7 +98,7 @@
                 android:inputType="phone" />
 
             <EditText
-                android:id="@+id/currentGrade"
+                android:id="@+id/accountInfoGrade"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
@@ -121,7 +107,7 @@
                 android:inputType="textPersonName" />
 
             <EditText
-                android:id="@+id/teacher"
+                android:id="@+id/accountInfoTeacher"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
@@ -130,7 +116,7 @@
                 android:inputType="textPersonName" />
 
             <EditText
-                android:id="@+id/emergencyContactInfo"
+                android:id="@+id/accountInfoEmergencyContact"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
@@ -150,17 +136,17 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="10dp"
         android:layout_marginTop="10dp"
-        android:text="@string/signup_txtview"
+        android:text="@string/account_information"
         android:textSize="24sp" />
 
     <Button
-        android:id="@+id/signup_btn"
+        android:id="@+id/update_info_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="10dp"
         android:layout_marginTop="5dp"
-        android:text="@string/signup_btn" />
+        android:text="@string/update_info" />
 
 </RelativeLayout>
