--- a/app/src/main/res/layout/activity_account_info.xml
+++ b/app/src/main/res/layout/activity_account_info.xml
@@ -5,127 +5,223 @@
     android:layout_height="match_parent"
     tools:context=".app.AccountInfoActivity">
 
-    <ScrollView
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_above="@+id/update_info_btn"
-        android:layout_alignParentStart="false"
         android:layout_below="@+id/account_info_txtview"
-        android:layout_centerHorizontal="true"
-        android:layout_marginLeft="25dp"
-        android:layout_marginRight="25dp">
+        android:layout_marginBottom="5dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginTop="5dp">
 
-        <LinearLayout
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_above="@+id/update_info_btn"
+            android:layout_alignParentStart="false"
+            android:layout_below="@+id/account_info_txtview"
+            android:layout_centerHorizontal="true"
             android:layout_gravity="center_horizontal"
-            android:orientation="vertical"
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp">
-
-            <EditText
-                android:id="@+id/accountInfoUserName"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:editable="false"
-                android:ems="10"
-                android:hint="@string/full_name_sign"
-                android:inputType="none"
-                android:textStyle="bold" />
-
-            <EditText
-                android:id="@+id/accountInfoEmail"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:editable="false"
-                android:ems="10"
-                android:hint="@string/e_mail_hint"
-                android:inputType="none"
-                android:textStyle="bold" />
+            android:layout_marginBottom="5dp"
+            android:layout_marginTop="15dp"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:orientation="vertical"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:gravity="center_horizontal"
+                    android:text="@string/full_name"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
 
                 <EditText
-                    android:id="@+id/accountInfoBirthMonth"
-                    android:layout_width="wrap_content"
+                    android:id="@+id/accountInfoUserName"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:layout_weight="1"
+                    android:layout_marginBottom="10dp"
+                    android:editable="false"
                     android:ems="10"
-                    android:hint="Birth month"
-                    android:inputType="date" />
+                    android:hint="@string/full_name_sign"
+                    android:inputType="none"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:gravity="center_horizontal"
+                    android:text="@string/e_mail"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
 
                 <EditText
-                    android:id="@+id/accountInfoBirthYear"
-                    android:layout_width="wrap_content"
+                    android:id="@+id/accountInfoEmail"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:layout_weight="1"
+                    android:layout_marginBottom="10dp"
+                    android:editable="false"
                     android:ems="10"
-                    android:hint="Birth year"
-                    android:inputType="date" />
+                    android:hint="@string/e_mail_hint"
+                    android:inputType="none"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:gravity="center_horizontal"
+                    android:text="@string/birthday"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginBottom="10dp"
+                    android:orientation="horizontal">
+
+                    <EditText
+                        android:id="@+id/accountInfoBirthMonth"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:ems="10"
+                        android:hint="@string/birth_month"
+                        android:inputType="date"
+                        android:maxLength="2" />
+
+                    <EditText
+                        android:id="@+id/accountInfoBirthYear"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:ems="10"
+                        android:hint="@string/birth_year"
+                        android:inputType="date"
+                        android:maxLength="4" />
+                </LinearLayout>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:gravity="center_horizontal"
+                    android:text="@string/address"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+
+                <EditText
+                    android:id="@+id/accountInfoAddress"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:ems="10"
+                    android:hint="@string/address_sign_up"
+                    android:inputType="textPersonName" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:gravity="center_horizontal"
+                    android:text="@string/home_phone"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+
+                <EditText
+                    android:id="@+id/accountInfoHomePhone"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:ems="10"
+                    android:hint="@string/home_phone_sign_up"
+                    android:inputType="phone" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:gravity="center_horizontal"
+                    android:text="@string/cell_phone"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+
+                <EditText
+                    android:id="@+id/accountInfoCellPhone"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:ems="10"
+                    android:hint="@string/cell_phone_sign_up"
+                    android:inputType="phone" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:gravity="center_horizontal"
+                    android:text="@string/grade"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+
+                <EditText
+                    android:id="@+id/accountInfoGrade"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:ems="10"
+                    android:hint="@string/grade_students_sign_up"
+                    android:inputType="textPersonName" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:gravity="center_horizontal"
+                    android:text="@string/teacher"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+
+                <EditText
+                    android:id="@+id/accountInfoTeacher"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:ems="10"
+                    android:hint="@string/teacher_students_sign_up"
+                    android:inputType="textPersonName" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:gravity="center_horizontal"
+                    android:text="@string/emergency_contact_info"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+
+                <EditText
+                    android:id="@+id/accountInfoEmergencyContact"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:ems="10"
+                    android:hint="@string/emergency_contact_info_sign_up"
+                    android:inputType="textPersonName" />
             </LinearLayout>
-
-            <EditText
-                android:id="@+id/accountInfoAddress"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:ems="10"
-                android:hint="@string/address_sign_up"
-                android:inputType="textPersonName" />
-
-            <EditText
-                android:id="@+id/accountInfoHomePhone"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:ems="10"
-                android:hint="@string/home_phone_sign_up"
-                android:inputType="phone" />
-
-            <EditText
-                android:id="@+id/accountInfoCellPhone"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:ems="10"
-                android:hint="@string/cell_phone_sign_up"
-                android:inputType="phone" />
-
-            <EditText
-                android:id="@+id/accountInfoGrade"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:ems="10"
-                android:hint="@string/grade_students_sign_up"
-                android:inputType="textPersonName" />
-
-            <EditText
-                android:id="@+id/accountInfoTeacher"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:ems="10"
-                android:hint="@string/teacher_students_sign_up"
-                android:inputType="textPersonName" />
-
-            <EditText
-                android:id="@+id/accountInfoEmergencyContact"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:layout_marginTop="10dp"
-                android:ems="10"
-                android:hint="@string/emergency_contact_info_sign_up"
-                android:inputType="textPersonName" />
-        </LinearLayout>
-    </ScrollView>
+        </ScrollView>
+    </android.support.v7.widget.CardView>
 
     <TextView
         android:id="@+id/account_info_txtview"
